--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,12 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/primary_color</item>
         <item name="colorPrimaryDark">@color/primary_dark_color</item>
+        <item name="elevation">0dp</item>
+    </style>
+<!--parent="style/Widget.AppCompat.Light.ActionBar.Solid.Inverse" -->
+    <style name="MiwokAppBarStyle" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Remove the shadow below the app bar -->
+
     </style>
 
     <!-- Style for a category of vocabulary words -->
@@ -29,5 +35,15 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAppearance">?android:textAppearanceMedium</item>
+    </style>
+
+    <style name="CategoryTab" parent="Widget.Design.TabLayout">
+    <item name="tabIndicatorColor">@android:color/white</item>
+    <item name="tabSelectedTextColor">@android:color/white</item>
+    <item name="tabTextAppearance">@style/CategoryTabTextAppearance</item><item name="android:background">@color/primary_color</item>
+    </style>
+
+    <style name="CategoryTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textColor">#A8A19E</item>
     </style>
 </resources>
